# NGCF

./: .gitignore  Dockerfile  README.md  data_loader.py  evaluate.py  main.py  metrics.py  model.py  pyproject.toml  util.py
src/: data_loader.py  eval_mf.py  losses.py  main.py  mf.py  model.py
