[tool.poetry]
name = "ngcf"
version = "0.1.0"
description = ""
authors = ["Hayashi-Yudai <yudai0913haya@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
torch = "^1.13.1"
numpy = "^1.24.1"
scipy = "^1.9.3"
scikit-learn = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
