[tool.poetry]
name = "ngcf"
version = "0.1.0"
description = ""
authors = ["Hayashi-Yudai <yudai0913haya@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^2.0.0"
numpy = "^1.24.2"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
